--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     }
 
     header img {
-  max-width: 100%;  /* 컨테이너 너비 내에서만 커짐 */
+  max-width: 100%; 
   height: auto;
   margin-bottom: 24px;
   pointer-events: none;
-  display: block;   /* 가끔 inline 이미지일 때 줄바꿈 문제 방지 */
+  display: block;  
   margin-left: auto;
-  margin-right: auto; /* 가운데 정렬 */
+  margin-right: auto;
 }
 
     nav {
@@ -70,6 +70,7 @@
       margin: 40px auto 50px;
       display: block;
       border-radius: 8px;
+      cursor: zoom-in;
     }
 
     .two-column {
@@ -107,6 +108,7 @@
       height: auto;
       border-radius: 8px;
       margin-bottom: 20px;
+      cursor: zoom-in;
     }
 
     footer {
@@ -150,7 +152,7 @@
     </nav>
 
     <main>
-      <img class="main-image" src="https://i.imgur.com/JJPQBRY.png" alt="시트러스 이미지" />
+      <img class="main-image" src="https://i.imgur.com/JJPQBRY.png">
 
       <div class="intro-text">
         <p>
@@ -167,7 +169,7 @@
           <p>
             뷰티에서는 시트러스 향수를 중심으로 비타민 C 세럼, 상큼한 메이크업 룩이 주목받고 있습니다. 특히 과즙 메이크업 트렌드와 맞물려 건강하고 생기 넘치는 인상을 주는 데 효과적입니다.  패션에서는 시트러스 컬러 원피스와 악세서리, 스니커즈까지 다양한 제품이 출시되고 있으며, 과감한 스타일링이 가능해 여름철 트렌디한 룩을 완성할 수 있습니다.
           </p>
-          <img src="https://i.imgur.com/lRk8rxa.jpeg" alt="뷰티 이미지">
+          <img src="https://i.imgur.com/lRk8rxa.jpeg">
           <p>
             시트러스 향수 중 오랫동안 사랑받은 향수 중 하나인 딥티크의 오데썽. 오데썽은 비터 오렌지나무의 나뭇가지와 나뭇잎, 그 열매에 이르기까지 모든 구성요소를 느낄 수 있도록 만들어진 향수인데요. 시트러스라고 했을 때, 과즙의 달달한 향이나 상큼하고 신맛이 날 것 같은 향, 시트러스 과피 특유의 쌉싸름한 향만 생각했다면 오데썽은 조금 다릅니다. 오렌지 열매만이 아닌 오렌지 나무 전체를 오롯이 느낄 수 있는 향으로 오렌지 나무의 열매와 꽃, 잎 그리고 줄기까지 한 그루를 사랑스럽게 담아냈으며, 시원한 주니퍼베리 향조가 같이 들어가 더욱 세련된 멋을 더해주죠.
           </p>
@@ -177,7 +179,7 @@
           <p>
             시트러스는 뷰티와 패션을 넘어 라이프스타일 영역까지 확장되고 있습니다. 공간을 밝히는 인테리어 팁으로는 시트러스 컬러 쿠션, 식물, 벽지 등을 활용할 수 있으며, 레시피에서는 감귤 칵테일과 디저트가 인기를 끌고 있습니다.
           </p>
-          <img src="https://i.imgur.com/EzrwVZ6.jpeg" alt="라이프스타일 이미지">
+          <img src="https://i.imgur.com/EzrwVZ6.jpeg">
           <p>
             남들과 다른 흔하지 않은 시트러스 향수를 찾고 있는 시트러스 향 마니아라면, 르 라보의 시티 익스클루시브 제품인 ‘리메트37’을 주목해 보세요. 리메트37은 샌프란시스코에서 영감을 받은 향으로 탑노트에선 시원한 라임과 베르가못 향조가 올라옵니다. 이어지는 자스민과 페티그레인, 클로브는 따스하면서 거품을 낸 비누가 연상되는 향이 지속되는데요. 마무리는 포근한 머스크와 베티버, 통카빈이 조화를 이루는 제품이에요.
           </p>
